'''
erDiagram
    t_persons ||--o{ t_students : "person_id"
    t_persons ||--o{ t_tutors : "person_id"
    t_persons ||--o{ t_institution_manager : "person_id"
    
    t_career ||--o{ t_students : "CAREER_ID"
    t_career ||--o{ t_tutor_career : "CAREER_ID"
    t_career ||--o{ t_career_internship_type : "CAREER_ID"
    t_career ||--o{ t_professional_practices : "CAREER_ID"
    t_career ||--o{ t_institution_career : "CAREER_ID"
    
    t_internship_type ||--o{ t_career_internship_type : "INTERNSHIP_TYPE_ID"
    t_internship_type ||--o{ t_professional_practices : "INTERNSHIP_TYPE_ID"
    t_internship_type ||--o{ t_institution_internship_type : "INTERNSHIP_TYPE_ID"
    
    t_internships_period ||--o{ t_professional_practices : "PERIOD_ID"
    
    t_institution ||--o{ t_professional_practices : "INSTITUTION_ID"
    t_institution ||--o{ t_institution_manager : "INSTITUTION_ID"
    t_institution ||--o{ t_institution_career : "INSTITUTION_ID"
    t_institution ||--o{ t_institution_internship_type : "INSTITUTION_ID"
    t_institution ||--o{ t_institution_manager_institution : "INSTITUTION_ID"
    
    t_institution_manager ||--o{ t_institution_manager_institution : "MANAGER_ID"
    
    t_students ||--o{ t_professional_practices : "STUDENTS_ID"
    t_students ||--o{ t_student_documents : "STUDENT_ID"
    t_students ||--o{ t_student_requests : "STUDENT_ID"
    t_students ||--o{ t_activity_logs : "STUDENT_ID"
    
    t_tutors ||--o{ t_tutor_career : "TUTOR_ID"
    t_tutors ||--o{ t_professional_practices_tutor : "TUTOR_ID"
    t_tutors ||--o{ t_practice_visits : "TUTOR_ID"
    t_tutors ||--o{ t_visit : "TUTOR_ID"
    
    t_professional_practices ||--o{ t_professional_practices_tutor : "PROFESSIONAL_PRACTICE_ID"
    t_professional_practices ||--o{ t_activity_logs : "PROFESSIONAL_PRACTICE_ID"
    t_professional_practices ||--o{ t_evaluation : "PROFESSIONAL_PRACTICE_ID"
    t_professional_practices ||--o{ t_practice_visits : "PROFESSIONAL_PRACTICE_ID"
    t_professional_practices ||--o{ t_visit : "PROFESSIONAL_PRACTICE_ID"
    
    t_evaluation ||--o{ t_evaluation_detail : "EVALUATION_ID"
    t_evaluation_criteria ||--o{ t_evaluation_detail : "CRITERIA_ID"
    
    t_request_types ||--o{ t_student_requests : "REQUEST_TYPE_ID"
    
    t_list ||--o{ t_value_list : "LIST_ID"
    
    t_tables ||--o{ t_columns : "TABLE_ID"
    t_tables ||--o{ t_change_log : "TABLE_ID"
    t_columns ||--o{ t_change_log : "COLUMN_ID"
    t_operation ||--o{ t_change_log : "OPERATION_ID"
    
    t_persons {
        int person_id PK
        varchar ci
        varchar first_name
        varchar middle_name
        varchar last_name
        varchar second_last_name
        varchar email
        varchar phone
        varchar gender
        timestamp birthdate
        varchar address
        varchar marital_status
        int status
        timestamp created_at
        timestamp updated_at
    }
    
    t_students {
        int STUDENTS_ID PK
        int person_id FK
        int CAREER_ID FK
        varchar STUDENTS_CI
        varchar NAME
        varchar SECOND_NAME
        varchar SURNAME
        varchar SECOND_SURNAME
        varchar CONTACT_PHONE
        varchar EMAIL
        varchar ADDRESS
        varchar GENDER
        varchar STUDENT_TYPE
        varchar MILITARY_RANK
        varchar EMPLOYMENT
        int STATUS
        timestamp CREATION_DATE
    }
    
    t_tutors {
        int TUTOR_ID PK
        int person_id FK
        varchar TUTOR_CI
        varchar NAME
        varchar SECOND_NAME
        varchar SURNAME
        varchar SECOND_SURNAME
        varchar CONTACT_PHONE
        varchar GENDER
        varchar EMAIL
        varchar PROFESSION
        varchar CONDITION
        varchar DEDICATION
        varchar CATEGORY
        varchar TITULO
        varchar ATTENTION_SCHEDULE
        int STATUS
        timestamp CREATION_DATE
    }
    
    t_career {
        int CAREER_ID PK
        varchar CAREER_NAME
        varchar CAREER_CODE
        numeric MINIMUM_GRADE
        varchar CAREER_ABBREVIATION
        varchar CAREER_TYPE
        varchar SEMESTER
        int STATUS
        timestamp CREATION_DATE
    }
    
    t_internship_type {
        int INTERNSHIP_TYPE_ID PK
        varchar NAME
        int PRIORITY
        int STATUS
        timestamp CREATION_DATE
    }
    
    t_internships_period {
        int PERIOD_ID PK
        varchar DESCRIPTION
        timestamp START_DATE
        timestamp END_DATE
        int STATUS
    }
    
    t_institution {
        int INSTITUTION_ID PK
        varchar INSTITUTION_NAME
        varchar RIF
        varchar INSTITUTION_TYPE
        varchar REGION
        varchar NUCLEUS
        varchar EXTENSION
        varchar INSTITUTION_ADDRESS
        varchar INSTITUTION_CONTACT
        int STATUS
    }
    
    t_institution_manager {
        int MANAGER_ID PK
        int person_id FK
        int INSTITUTION_ID FK
        varchar MANAGER_CI
        varchar NAME
        varchar SURNAME
        varchar CONTACT_PHONE
        varchar EMAIL
        int STATUS
    }
    
    t_professional_practices {
        int PROFESSIONAL_PRACTICE_ID PK
        int STUDENTS_ID FK
        int INSTITUTION_ID FK
        int CAREER_ID FK
        int PERIOD_ID FK
        int MANAGER_ID FK
        int INTERNSHIP_TYPE_ID FK
        varchar DEPARTMENT
        timestamp START_DATE
        timestamp END_DATE
        numeric GRADE
        varchar REGIME
        varchar SEMESTER
        varchar SECTION
        int STATUS
    }
    
    t_activity_logs {
        int ACTIVITY_LOG_ID PK
        int PROFESSIONAL_PRACTICE_ID FK
        int STUDENT_ID FK
        date ACTIVITY_DATE
        int WEEK_NUMBER
        numeric HOURS_WORKED
        varchar ACTIVITY_TYPE
        text ACTIVITY_DESCRIPTION
        text TASKS_COMPLETED
        text CHALLENGES
        text LEARNINGS
        text SUPERVISOR_COMMENTS
        boolean SUPERVISOR_APPROVED
        int SUPERVISOR_ID
        int STATUS
        timestamp CREATED_AT
    }
    
    t_evaluation {
        int EVALUATION_ID PK
        int PROFESSIONAL_PRACTICE_ID FK
        int REGISTERED_BY FK
        varchar EVALUATOR_TYPE
        varchar EVALUATOR_NAME
        varchar EVALUATOR_CI
        numeric TOTAL_SCORE
        text OBSERVATIONS
        timestamp EVALUATION_DATE
        int STATUS
    }
    
    t_evaluation_criteria {
        int CRITERIA_ID PK
        varchar DESCRIPTION
        int ITEM_NUMBER
        varchar EVALUATOR_TYPE
        int STATUS
    }
    
    t_evaluation_detail {
        int DETAIL_ID PK
        int EVALUATION_ID FK
        int CRITERIA_ID FK
        int SCORE
        int ITEM_NUMBER
    }
    
    t_practice_visits {
        int VISIT_ID PK
        int PROFESSIONAL_PRACTICE_ID FK
        int TUTOR_ID FK
        varchar VISIT_TYPE
        varchar VISIT_CASE
        timestamp VISIT_DATE
        text OBSERVATIONS
        int STATUS
    }
    
    t_visit {
        int VISIT_ID PK
        int PROFESSIONAL_PRACTICE_ID FK
        int TUTOR_ID FK
        timestamp VISIT_DATE
        text OBSERVATIONS
        int STATUS
    }
    
    t_student_documents {
        int DOCUMENT_ID PK
        int STUDENT_ID FK
        int REVIEWED_BY FK
        varchar DOCUMENT_TYPE
        varchar TITLE
        text FILE_PATH
        varchar STATUS
        timestamp REGISTRATION_DATE
    }
    
    t_student_requests {
        int REQUEST_ID PK
        int STUDENT_ID FK
        int REQUEST_TYPE_ID FK
        varchar REQUEST_TYPE
        text DESCRIPTION
        varchar STATUS
        boolean IS_REASSIGNMENT
        timestamp CREATED_AT
    }
    
    t_request_types {
        int REQUEST_TYPE_ID PK
        varchar NAME
        varchar CATEGORY
        varchar DESCRIPTION
        int STATUS
    }
    
    t_tutor_career {
        bigint TUTOR_CAREER_ID PK
        int TUTOR_ID FK
        int CAREER_ID FK
        timestamp created_at
    }
    
    t_professional_practices_tutor {
        int PROFESSIONAL_PRACTICES_TUTOR_ID PK
        int TUTOR_ID FK
        int PROFESSIONAL_PRACTICE_ID FK
        varchar TUTOR_TYPE
    }
    
    t_career_internship_type {
        int ID_CAREER_INTERNSHIP_TYPE_ID PK
        int CAREER_ID FK
        int INTERNSHIP_TYPE_ID FK
    }
    
    t_institution_career {
        int INSTITUTION_CAREER_ID PK
        int INSTITUTION_ID FK
        int CAREER_ID FK
    }
    
    t_institution_internship_type {
        int INSTITUTION_INTERNSHIP_TYPE_ID PK
        int INSTITUTION_ID FK
        int INTERNSHIP_TYPE_ID FK
    }
    
    t_institution_manager_institution {
        int INSTITUTION_MANAGER_INSTITUTION_ID PK
        int MANAGER_ID FK
        int INSTITUTION_ID FK
    }
    
    t_list {
        int LIST_ID PK
        varchar NAME
        varchar DESCRIPTION
        int STATUS
    }
    
    t_value_list {
        int VALUE_LIST_ID PK
        int LIST_ID FK
        varchar VALUE
        varchar DESCRIPTION
        int STATUS
    }
    
    t_tables {
        int TABLE_ID PK
        varchar NAME
        varchar DESCRIPTION
        varchar PHYSICAL_NAME
        int LOG
        int STATUS
    }
    
    t_columns {
        int COLUMN_ID PK
        int TABLE_ID FK
        varchar COLUMN_NAME
        int STATUS
    }
    
    t_change_log {
        int CHANGE_LOG_ID PK
        timestamp DATE_TIME
        int TABLE_ID FK
        int COLUMN_ID FK
        int OPERATION_ID FK
        int USER_ID FK
        varchar OLD_VALUE
        varchar NEW_VALUE
    }
    
    t_operation {
        int OPERATION_ID PK
        varchar ACTION
        varchar DESCRIPTION
        int STATUS
    }
    
    t_config {
        int CONFIG_ID PK
        int RECOVERY_EMAIL
        int BLOCKING_DAYS
        int WRONG_KEY_LOCK
        int ATTEMPTS_KEY_BLOCK
        int KEY_EXPIRATION
        int EXPIRATION_DAYS
    }
    
    t_backups {
        uuid id PK
        varchar name
        text description
        varchar file_name
        bigint size
        text tables
        int created_by
        jsonb data
        timestamp created_at
        timestamp updated_at
    }
    
    t_notifications {
        int NOTIFICATION_ID PK
        int USER_ID FK
        varchar TYPE
        varchar TITLE
        text MESSAGE
        boolean READ
        timestamp CREATED_AT
    }
    
    t_chat_sessions {
        varchar SESSION_ID PK
        int USER_ID FK
        varchar TITLE
        jsonb MESSAGES
        timestamp CREATED_AT
        timestamp UPDATED_AT
        int STATUS
    }
    
    t_landing_config {
        int config_id PK
        varchar config_key
        jsonb config_value
        timestamp updated_at
    }
